--- a/styles.css
+++ b/styles.css
@@ -45,18 +45,32 @@ button:hover {
     background-color: #0056b3;
 }
 
-#controls {
+#audioPlayer {
+    margin-top: 20px;
+    width: 100%;
+}
+
+#playerControls {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     margin-top: 10px;
 }
 
-#controls button {
-    margin-right: 10px;
+#playPauseButton {
     padding: 5px 10px;
+    margin-right: 10px;
 }
 
-#controls span {
-    font-size: 1rem;
+#currentTime, #duration {
+    font-size: 14px;
+}
+
+#progressContainer {
+    margin-top: 20px;
+}
+
+progress {
+    width: 100%;
+    height: 20px;
 }
